@@ -9,7 +9,7 @@ bundled_mspack =        mspack/mspack.h \
                         mspack/macros.h mspack/readbits.h mspack/readhuff.h
 
 TESTS =                 test/bugs.test test/case-ascii.test test/case-utf8.test \
-                        test/dirwalk-vulns.test test/encoding.test \
+                        test/dir.test test/dirwalk-vulns.test test/encoding.test \
                         test/mixed.test test/search.test test/simple.test \
                         test/split.test test/utf8-stresstest.test \
                         test/symlinks.test
