@@ -1,3 +1,11 @@
+2023-02-19  Stuart Caie <kyzer@cabextract.org.uk>
+
+	* ensure_filepath(): had wrong logic, for the archive-controlled
+	part of a pathname, it was using the result of lstat() whether
+	it succeeded or not, and thus not creating directories when it
+	ought to. Fixed and added a testcase for cabextract's --directory
+	option. Thanks to iq2luc for raising the issue and offering a fix.
+
 2023-02-04  Stuart Caie <kyzer@cabextract.org.uk>
 
 	* src/cabextract.c: By default, cabextract will now overwrite
